Import file chooser now contains account name